[package]
name = "zbus-nm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }
serde = "1.0.137"
zvariant = "3.2.0"